Fix model-viewer auto-sizing. Shrink upload size.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,11 +33,19 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Create distribution 
+        run: |
+          mkdir distribution
+          cp index.html distribution
+          cp -R documents distribution
+          cp -R examples distribution
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          name: distribution
+          path: distribution
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: distribution
