Export javascript libraries.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,7 @@ jobs:
           cp -R documents distribution
           cp -R examples distribution
           cp -R src distribution
+          cp -R javascript distribution
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
